walkthroughs/custom-policy/policies/block-storageclass/samples/blocked2.yaml
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: myclaim
spec:
  storageClassName: blocked2
