walkthroughs/custom-policy/policies/block-storageclass/samples/working.yaml
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: myclaim
spec:
  storageClassName: allowed
